--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#0F1621</color>
+    <color name="switch_on">#29303c</color>
+    <color name="switch_background">#18202e</color>
 </resources>
